Several #800 revisions and bugfixes on execution.